# My-Programming-Sketchbook

./: .gitignore  .gitmodules  My-Sublime-Packages.md  README.md  Sublime Packages.md  untitled.m
.mjolnir/: helloWorld.lua  init.lua  initEdit.lua  initSource.lua
Alfred/: README.md
Alfred/user.workflow.916AD8B6-BC1A-48C6-B63B-1A21078DCC59/: Alfred  README.md  info.plist  process.py
Alfred/user.workflow.D67DE9BE-47D0-4727-BF34-DFA7132EDCD1/: README.md  hammerspoon.py  info.plist
AppleScripts/: ExampleHotKeys.scpt  README.md  WIP.md  altalt.scpt  alternate.scpt  compile.bash  compile.sh  example.scpt  loader.py  runScriptFrom.py  start.scpt  testLogger.scpt
AppleScripts/Dev/: Baacklit_Keyboard_Brightness.applescript
AppleScripts/Examples/: DoNotDisturb.applescript  Echo.applescript  LoopSpeakingTest.applescript  Toggle_Backlit_Display_Brightness.applescript  Unused.md  UserInput.applescript
AppleScripts/Hammerspoon/: chrome_songs.applescript  load_order.applescript  load_safari_quitter.applescript
AppleScripts/Hammerspoon-scpt/: ActivateTrackpadGestures.applescript  README.md  ToggleDND.applescript  bluetooth_toggle.applescript  chrome_songs.applescript.backup  load_order.applescript  sleep.applescript
AppleScripts/Other/: ExampleHotKeys.applescript  altalt.applescript  alternate.applescript  end.applescript  example.applescript  presentation.applescript  start.applescript  testLogger.applescript
Assorted_Snippets/: .flake8  .gitignore  LaTeX.md  README.md  git.md  java.md  package-lock.json  package.json  pyproject.toml  python-archive.md  python.md  terminal_recording.md
Assorted_Snippets/_cli_prototyping/: __init__.py  proto_02.py  proto_04.py
Assorted_Snippets/notebooks/: README.md  ast_testing.py  dot.py  example.py  python-ipynb.py
Assorted_Snippets/python/: github_README.md  grafana_test_script.py  interactive_debugging.py  python-archive.md  python-wip.md  python.md  terminal_recording.md
Assorted_Snippets/python/_archive/: gen_puml_from_code.py
Assorted_Snippets/python/_archive/prefect-elt-tutorial/: .gitignore  01_etl.py  04_handle_failures.py  05_schedules.py  06_parallel_execution.py  07_whats_next.py  README.md  pyproject.toml
Assorted_Snippets/python/_archive/prefect-elt-tutorial/aircraftlib/: analysis.py
Assorted_Snippets/python/_cli_prototyping/: README.md
Assorted_Snippets/python/cli_prototyping/: multi-level-arg_parse-proto.py  proto_01.py  proto_03.py  proto_04.py
Assorted_Snippets/python/dagster-task-orchestration/: README.md  dagster_demo.py  pyproject.toml
Assorted_Snippets/python/dagster-task-orchestration/dagit-cache/: dagster.yaml
Assorted_Snippets/python/fake_data_wip/: sw_generator.py  sw_tests.py
Assorted_Snippets/python/notebooks/: README.md  tmdb.py
Assorted_Snippets/python/parallel_programming/: coroutines.py  log_parsing.py
Assorted_Snippets/python/parallel_programming/log/: .gitignore
Assorted_Snippets/python/prefect-elt-tutorial/: 02_etl_flow.py  03_parameterized_etl_flow.py  08_xfiles.py
Assorted_Snippets/python/socket_prototyping/: client_cmd2.py  client_makefile.py  client_socket.py  file_like_socket_notes.py  server_cmd2.py  server_makefile.py  server_socket.py
Assorted_Snippets/python_general/: python-wip.md  python.md
Assorted_Snippets/python_general/_cli_prototyping/: proto_01.py
C/BIOE332/: H1.m
Chrome Extensions/: A Better WebClock.sketch  README.md  notes.html  notes.md
ENGL393/: README.html  README.md
Electronics/: .gitignore  LED Controller.fz  README.md  part.2.1mm_DC_Barrel_Jack__0d81611f192da410c39c2b4301ccb3cb.fzp  part.RGB Strip LED_9262e1cf4d6f2c6fb01177709255c2bc_1.fzp
GCode/: 2016-01-13_bead-wells.jsb  README.md
JavaScript/: README.md
Microduino-and-Arduino-Projects/: README.md
Other/: Hackintosh-IntelNUC.md  HackintoshNotes.md  LaernBashInYMinutes.md
Pebble/: README.md
Python/: FocusedAppWatcher.py  README.md  downlink_plot.py
R/: Alex_ESG_EmployeeReport.R  BarPlotExample.R
Raspberry_Pi/: README.md  Shairport_Install.md
Recipes/: README.md
Scripts/: Baacklit_Keyboard_Brightness.scpt  EchoTest.scpt  InternetSharing.scpt  bluetooth_toggle.applescript  bluetooth_toggle.scpt  compile.bash  internetSharing.applescript  load_order.scpt  terminalcolorstest.py
Sketch Projects/: 2014_10_SmartBottle QH Profile.sketch  2015_N1-Unsubscribe.sketch  2015_Pug_Logo_Redesign.sketch  2016_FathersDay_Vader.sketch  2016_RoomLayout.sketch  2018_AlexFamilyTree.sketch  Pug_Logo_Redesign.sketch  Scanbot Feedback.sketch  TeamBikes.sketch  Unsubscribe.sketch
_Archive/: My-Sublime-Packages.md
_Snippets_/: java.md  python.md
iOS/: README.md
(+1131 files in other folders)
