[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
length_sort = false
line_length = 120

[tool.poetry]
name = "assorted_snippets"
version = "0.0.0"
description = "Assorted Python Snippets"
authors = [ "Kyle King <KyleKing@users.noreply.github.com>",]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
dill = "^0.3"
loguru = "^0.5"
numpy = "^1.19"
pandas = "^1.1"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
async-files = "^0.4"
asyncstdlib = "^3.9"
ipykernel = "^5.3"
ipywidgets = "^7.5"
julynter = "^0.4"
jupyter-kite = "^1.2"
jupyterlab = "^2.2"
jupytext = "^1.6"
plotly = "^4.12"
pyparsing = "^2.4"
PySimpleGUI = "^4.30"
tmdbsimple = "^2.6"

# Experimental
great-expectations = "*"
pandas-schema = "*"
pandera = "*"

[tool.poetry.dependencies.calcipy]
git = "https://github.com/kyleking/calcipy.git"
branch = "dev/development"
rev = "56802cf"  # Always pin to a commit
develop = true  # Optional: will reinstall each time

[tool.poetry.dev-dependencies.calcipy]
git = "https://github.com/kyleking/calcipy.git"
branch = "dev/development"
# extras = [ "dev", "lint", "test",]
extras = [ "dev", "lint"]
