[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dagster-demo"
version = "0.0.0"
description = "Dagster Task Orchestrator Tutorials"
authors = [ "Kyle King <KyleKing@users.noreply.github.com>",]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.11"
dagit = "*"

[tool.poetry.dev-dependencies]
