[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aircraftlib"
version = "0.0.0"
description = "Assorted Python Snippets"
authors = [ "Kyle King <KyleKing@users.noreply.github.com>",]

[tool.poetry.dependencies]
python = "^3.8"
prefect = {extras = ["viz"], version = "^0.14.9"}
SQLAlchemy = "^1.3.23"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
